[package]
name = "proxy-wasm-test-framework"
version = "0.1.0"
authors = ["Christopher Agia <chrisagia@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "9.0.3"
anyhow = "1.0.31"
lazy_static = "1.4.0"
more-asserts = "0.2.1"
rand = "0.7.3"
structopt = "0.3.16"
